# chess_fitz

./: Cargo.toml  README.md
crates/game_data/: Cargo.toml
crates/game_data/src/: lib.rs
crates/move_mappings/: Cargo.toml  build.rs
crates/move_mappings/src/: lib.rs
crates/prepare_data/: Cargo.toml
crates/prepare_data/src/: main.rs
src/: chess.rs  history.rs  main.rs
